### March xx 2021, Release version 0.9.3 ###

  ADDED:
    * a function to sync graphic materials has been added (to avoid icons and stylesheet issues).

  FIXED:
    * fixed an issue with paho mqtt disconnect callback.
    * if battery and/or signal values are None, it leads to an exception, it has been fixed.


### March 1 2021, Release version 0.9.2 ###

  * ADDED:
    * a function to test postgresql server, database and tables has been added.

  * MODIFIED:
    * time series are plotted only if a connection to the database is successful.
    * the function to test postgresql server, database and tables is now connected to mainwindow, it will
    control the display of data and time series, and the work of sensors.
    * the info window has been modified for better handling.
    * code has been cleaned.
    * logging messages have been cleaned.
    * QWaitSpinner widget has been removed.


### March 1 2021, Release version 0.9.1 ###

  * MODIFIED:
    * a solution has been found to avoid absolute path for stylesheet and images in all windows.
    * options have been transferred from dev branch to master branch.
    * a new way to compute the position of all windows has been introduced.
    * cursor on raspberry pi is now hidden from the mainwindow.
    * cursor blanking has been removed from the about window.
    * if error happens during the rendering of time series, the spinner widget is now cleared.
    * moved the option window to its own py file.
    * moved all weather windows to their own py file.
    * renamed the other windows py file.
    * scrollbar has been reintegrated in all windows.

  * FIXED:
    * fixed an issue with the option dictionary.
    * if threads are not launched at startup, it throws an error when exiting. It has been fixed.
    * new position computation has been corrected for keyboard, numpad and town windows.

  * ADDED:
    * a to do / to fix file has been added.


### February 6 2021, Release version 0.9.0 ###

  * MODIFIED: