@@ -6,6 +6,7 @@
   FIXED:
     * fixed an issue with paho mqtt disconnect callback.
     * if battery and/or signal values are None, it leads to an exception, it has been fixed.
+    * if a sensor is not detected, the corresponding thread is stopped.
 
 
 ### March 1 2021, Release version 0.9.2 ###
